# AdvancedGIS_Seg_InfoorPointCloud

./: '  PCA.py  RANSAC_DBSCAN.ipynb  README.md  segmented_output.ply
.ipynb_checkpoints/: RANSAC_DBSCAN-checkpoint.ipynb
AccuracyDetection/: Accuracy_detect.py
CityGML/: CityGML_writer.ipynb  data_format  room_structure.gml
MMDetection/: Dockerfile
PC2Model/: CMakeLists.txt  hough_test.h  main.cpp
PCA/PCA_dataTest/: PCA1.py  output_pca_planes_simplified.ply
PCA_dataTest/: PCA.py  edge_detected_output.ply
Plane_Extraction/PCA_dataTest/: PCA.py  segmented_output.ply
Plane_Extraction/synth1_walls/: wall10_clean.ply  wall12_clean.ply  wall2_clean.ply  wall4_clean.ply  wall5_clean.ply  wall7_clean.ply  wall8_clean.ply
RANSANC/: __init__.py  dbscan_test.py  downsample_ply.py  find_plane.py  main.py  merge_ply.py  read_test.py
hough_single/: CMakeLists.txt  main.cpp
hough_single/.cache/clangd/index/: main.cpp.D94736882A03FFE2.idx
hough_single/hdbscan/: label11.ply
mmde3d/: Dockerfile  __init__.py  classes_SemVoxLabel.txt  clean_cf.py  mask2bin.py  ply2bin.py  ransac.py
mmde3d/preds/: 2C05_downsample.json  2C05_ds_sg.ply  GE006_downsample_hard.json  synth1_downsample.json  synth1_xyz.json
normal_vector_clustering/: normal_vector_clustering.ipynb
reconstruct/: Line.py  extract_wall.py  find_structure.py  project22d.py  reconstruction.py  single_RG.py
reconstruct/GE_005/: label34.ply  label42.ply  (+2 more)
synth1_walls/: wall0_clean.ply  wall11_clean.ply  wall13_clean.ply  wall15_clean.ply  wall1_clean.ply  wall3_clean.ply  wall6_clean.ply  wall9_clean.ply
(+36 files in other folders)
